--- a/adoa-nodejs/views/homepage.jade
+++ b/adoa-nodejs/views/homepage.jade
@@ -27,7 +27,7 @@ block body
     footer#footer
       .center
         .wrapper
-          .container
+          .container(style="height:auto;")
             .ad_footer-line
             .bg
               .row
