--- a/adoa-nodejs/views/layout.jade
+++ b/adoa-nodejs/views/layout.jade
@@ -30,15 +30,19 @@ html
     script(src="/js/dependencies/lib/underscore-min.js")
     script(src="/js/dependencies/lib/modernizr.custom.js")
     script(src="/js/dependencies/lib/classie.js")
+    script(src="/js/dependencies/lib/adoa-functions.js")
     script(src="/js/dependencies/lib/backbone-min.js")
     script(src="/js/dependencies/lib/boxesFx.js")
     script(src="/js/dependencies/lib/caroufredsel.js")
+    script(src="/js/dependencies/lib/fixContent.js")
     script(src="/js/dependencies/lib/handlebars.runtime-v2.0.0.js")
     script(src="/js/dependencies/lib/metro-slider.js")
     script(src="/js/dependencies/lib/plugins.js")
     script(src="/js/dependencies/lib/portfolio.js")
     script(src="/js/dependencies/lib/tinyscrollbar.js")
     script(src="/templates.js")
+    script(src="/js/app/controllers/details-single.js")
     script(src="/js/app/controllers/index.js")
+    script(src="/js/app/controllers/list-post.js")
     script(src="/js/app/routes.js")
     // SCRIPTS END
