--- a/adoa/css/style.css
+++ b/adoa/css/style.css
@@ -291,7 +291,7 @@ header h1.main-title{
 #top-header #main-nav ul li a{
 	color:#C60;
 	text-decoration:none;
-	font-size:18px;
+	font-size:14px;
 	font-weight: 200;
 	font-family: 'Raleway', 'Arial', sans-serif;
 }
@@ -344,7 +344,7 @@ main#content #features header{
 
 #features section.item-post .col-right p{
 	line-height:20px;
-
+	
 }
 div#features-dots{
 	float:left;
@@ -411,26 +411,26 @@ main#content #works .ad_banner-title h1 {
     text-shadow: -1px -1px 1px #333;
 }
 
-/************TEAM****************/
+/************list-isotope****************/
 
-main#content #team{
+main#content .ad_isotope{
 	height:700px;
 	width: 100%;
 	float:left
 }
-main#content #team header{
+main#content .ad_isotope header{
 	width:100%;
 	height:100px;
 	text-align:center;
 
 }
 
-#team #list-team{
+.ad_isotope .list-isotope{
 	width:100%;
 	float:left;
 	margin-top:10px;
 }
-#team #list-team .item-team{
+.ad_isotope .list-isotope .item-isotope{
 	width:293px;
 	height:290px;
 	float:left;
@@ -439,9 +439,9 @@ main#content #team header{
 	min-height: 1px;
 	padding-left: 15px;
 	padding-right: 15px;
-
+	
 }
-#team #list-team .icon-round {
+.ad_isotope .list-isotope .icon-round {
     background: url("../images/stripe-3.gif") repeat scroll 0 0 rgba(0, 0, 0, 0);
 	border-radius: 192px;
     cursor: pointer;
@@ -449,12 +449,12 @@ main#content #team header{
     text-align: center;
     width: 192px;
 	margin: 0px auto;
-
+	
 }
-#team #list-team .icon-round .bg-wrapper {
+.ad_isotope .list-isotope .icon-round .bg-wrapper {
     padding: 20px;
 }
-#team #list-team .icon-round .bg{
+.ad_isotope .list-isotope .icon-round .bg{
     background: none repeat scroll 0 0 #303030;
     border-radius: 152px;
     display: table-cell;
@@ -464,10 +464,10 @@ main#content #team header{
     vertical-align: middle;
     width: 152px;
 }
-#team #list-team .icon-round .bg img{
+.ad_isotope .list-isotope .icon-round .bg img{
 	width: 152px;
 }
-#team #list-team h3.name-team{
+.ad_isotope .list-isotope h3.name-isotope{
  	color: #484848;
     font-family: "bebas_neueregular","open_sansregular","arial";
     font-weight: 500;
@@ -477,7 +477,7 @@ main#content #team header{
 	font-size: 32px;
 	line-height: 32px;
 }
-#team #list-team .btn-small {
+.ad_isotope .list-isotope .btn-small {
     border-radius: 20px;
     padding: 10px 20px;
 	color: #CCC;
@@ -528,125 +528,6 @@ main#content #team header{
 }
 .accordion-group, .nav-pills > li > a {
     border-radius: 0;
-}
-
-/************partners****************/
-
-main#content #partners{
-  height:700px;
-  width: 100%;
-  float:left
-}
-main#content #partners header{
-  width:100%;
-  height:100px;
-  text-align:center;
-
-}
-
-#partners #list-partners{
-  width:100%;
-  float:left;
-  margin-top:10px;
-}
-#partners #list-partners .item-partners{
-  width:293px;
-  height:290px;
-  float:left;
-  text-align: center;
-  position: relative;
-  min-height: 1px;
-  padding-left: 15px;
-  padding-right: 15px;
-
-}
-#partners #list-partners .icon-round {
-  background: url("../images/stripe-3.gif") repeat scroll 0 0 rgba(0, 0, 0, 0);
-  border-radius: 192px;
-  cursor: pointer;
-  height: 192px;
-  text-align: center;
-  width: 192px;
-  margin: 0px auto;
-
-}
-#partners #list-partners .icon-round .bg-wrapper {
-  padding: 20px;
-}
-#partners #list-partners .icon-round .bg{
-  background: none repeat scroll 0 0 #303030;
-  border-radius: 152px;
-  display: table-cell;
-  height: 152px;
-  margin: 0 auto;
-  overflow: hidden;
-  vertical-align: middle;
-  width: 152px;
-}
-#partners #list-partners .icon-round .bg img{
-  width: 152px;
-}
-#partners #list-partners h3.name-partners{
-  color: #484848;
-  font-family: "bebas_neueregular","open_sansregular","arial";
-  font-weight: 500;
-  line-height: 16px;
-  margin: 0 0 8px;
-  text-rendering: optimizelegibility;
-  font-size: 32px;
-  line-height: 32px;
-}
-#partners #list-partners .btn-small {
-  border-radius: 20px;
-  padding: 10px 20px;
-  color: #CCC;
-  font-family: "open_sansregular","arial";
-  font-size: 13px;
-  line-height: 23px;
-}
-
-.nav-pills {
-  margin-bottom: 40px;
-  margin-top:15px;
-}
-.nav-pills > li {
-  float: left;
-}
-.nav-pills > li + li {
-  margin-left: -1px;
-}
-.nav-pills > li {
-  background-color: #fafafa;
-  background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
-  background-repeat: repeat-x;
-  border: 1px solid #d4d4d4;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
-  min-height: 40px;
-}
-.nav-pills > li > a {
-  border-top: 3px solid #ddd;
-  font-size: 14px;
-  font-weight: bold;
-  letter-spacing: -0.1px;
-  margin: 0;
-  padding: 16px 20px;
-  display: block;
-  padding: 10px 15px;
-  position: relative;
-  color: #f79e35;
-  text-decoration: none;
-}
-.nav-pills > li > a:hover {
-  border-top: 3px solid #f79e35;
-  color: #484848;
-}
-.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
-  background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-  border-top: 3px solid #f79e35;
-  color: #484848;
-}
-.accordion-group, .nav-pills > li > a {
-  border-radius: 0;
 }
 
 /****************CONTACT***********************/
